EllipsedTooltip - fix overflow issues

--- a/packages/wix-ui-core/src/hocs/EllipsedTooltip/EllipsedTooltip.st.css
+++ b/packages/wix-ui-core/src/hocs/EllipsedTooltip/EllipsedTooltip.st.css
@@ -6,4 +6,9 @@
 .root {
   -st-extends: Tooltip;
   display: inherit;
+  overflow: hidden;
+}
+
+.root::popoverElement {
+  max-width: 100%;
 }
